refactor: simplify product http structure
